--- a/CreateIncidentCstoServiceNow/CreateIncidentCstoServiceNow.csproj
+++ b/CreateIncidentCstoServiceNow/CreateIncidentCstoServiceNow.csproj
@@ -33,11 +33,16 @@
     <Reference Include="System.Net.Http">
       <Private>True</Private>
     </Reference>
-    <Reference Include="System" />
+    <Reference Include="System">
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Json" />
+    <Reference Include="System.Json.Microsoft" />
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="System.Json" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
